fix(page): scrollbar placement

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #f3f3f3;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .page__content {
